base/middleware-https-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sskd-https-redirect
  namespace: sskd
spec:
  redirectScheme:
    scheme: https
    permanent: true
