base/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-redirect-https
  namespace: sskd
spec:
  redirectScheme:
    scheme: https
    permanent: true
