base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sskd
  labels:
    name: sskd
    environment: production
