base/service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: sskd
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: app-deployment
