base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: sskd
  annotations:
    # K3S Traefik annotations
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/ssl-permanent-redirect: "true"
    # Proxy settings
    traefik.ingress.kubernetes.io/proxy-body-size: "10m"
    traefik.ingress.kubernetes.io/proxy-read-timeout: "60"
    traefik.ingress.kubernetes.io/proxy-send-timeout: "60"
    # Additional settings
    traefik.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
    # SSL
    cert-manager.io/cluster-issuer: ssl
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: sskd.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sskd-frontend
                port:
                  number: 80
  tls:
    - secretName: sskd-tls
      hosts: sskd.tech
